# ml-vol-momentum

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/processed/: sp500_membership.parquet
docs/: phase1_results.md  predictions.md  scope.md  surprises.md
results/: extension2_summary.md  extensions_analysis_summary.md
results/forecasts/: tcn_partial.parquet
results/strategies/: tcn_partial_scaled.parquet
scripts/: build_data.py  compare_all_models.py  finish_phase3.sh  run_baselines.py  run_extension1.py  run_extension2.py  run_extensions_analysis.py  run_ml_models.py  run_phase4.py  smoke_test_ml_models.py  validate_checkpoint_2a.py  validate_checkpoint_2b.py  validate_checkpoint_2c.py  validate_checkpoint_3a.py  validate_checkpoint_3b.py
src/: config.py
src/data/: features.py  loaders.py  targets.py  universe.py
src/eval/: comparison.py  metrics.py  synthetic.py  tests.py  walk_forward.py
src/interp/: regime_analysis.py  sector_neutral.py  shap_analysis.py
src/models/: baselines.py  forecaster.py  gbm.py  lstm_model.py  mlp_model.py  (+3 more)
tests/: test_architecture_comparison.py  test_baselines.py  test_comparison.py  test_features.py  test_gbm.py  test_loaders.py  test_lstm.py  test_metrics.py  test_pipeline_e2e.py  test_prob_lstm.py  test_regime_analysis.py  test_replication.py  test_sector_neutral.py  test_shap_analysis.py  test_stat_tests.py  test_strategy.py  test_synthetic.py  test_targets.py  test_uncertainty_scale.py  test_universe.py  test_walk_forward.py  test_walk_forward_integration.py
(+12 files in other folders)
